<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParamMod</string>
    <string name="action_settings">Settings</string>    
    <string name="ljudul">Title: </string>
    <string name="lpembuat">Creator: </string>
    <string name="lmd5">MD5SUM: </string>
    <string name="lcode">Codename:</string>
    <string name="link">Link:</string>
    <string name="prev">Preview:</string>
    <string name="backup">Backup</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="help">Help</string>
    <string name="refresh">Refresh</string>
    <string name="restore">Restore</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- AlertDialog -->
    <string name="wrestore">Are you sure to restore?</string>
    <string name="winstall">Are you sure to install?</string>
    <string name="md5salah">MD5 Missmatch</string>
    <string name="wdown">Are you sure to Download?</string>
    <string name="wdownagain">File Corrupted!!\n;Could you like to Download again?</string>
    <string name="wnotexist">File does not exist!!\n;Could you like to Download again?</string>
    <string name="downloading">Downloading file. Please wait&#8230;</string>
    <string name="winternet">Internet Connection Required</string>
    <string name="downloadcom">Download Complete</string>
    <string name="falert">I would not blame anyone if there is damage on my phone</string>

    <!-- HelpDialog-->
    <string name="hbackup">Backup current param.lfs to sdcard</string>
    <string name="hrestore">Install param.lfs from sdcard</string>
    <string name="hrefresh">Refresh list</string>
    <string name="hhelp">Show help Dialog</string>
    <string name="hdown">Download param.lfs</string>
    <string name="hinstall">Install param.lfs</string>

    <!--Tombol Dialog-->
    <string name="ya">Yes</string>
    <string name="tak">No</string>
    <string name="share">Share</string>
    <string name="keluar">Exit</string>
    <string name="coba">Retry</string>
    <string name="batal">Cancel</string>
    <string name="sembunyi">Hide</string>
    
    <!--Notification-->
    <string name="backupcom">Backup Completed</string>
    <string name="restorecom">Restore Completed</string>
    <string name="installcom">Install Completed</string>
    <string name="filekorup">File Corrupted</string>

    <!--File Chooser-->
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string> 

</resources>
