<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" 
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:contentDescription="@string/app_name"
        android:padding="1dp" />

    <TableLayout
        android:id="@+id/detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ljudul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ljudul" />

            <TextView
                android:id="@+id/judul"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lpembuat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lpembuat" />

            <TextView
                android:id="@+id/pembuat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lmd5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lmd5" />

            <TextView
                android:id="@+id/md5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:ems="10"
                android:singleLine="false" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lcode" />

            <TextView
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false" />
        </TableRow>
    </TableLayout>

</LinearLayout>